packages/llvm/src/tests/variable_declaration/snapshots/llvm__tests__variable_declaration__const_variable_declaration__const x  = "Hello World".snap
---
source: packages/llvm/src/tests/variable_declaration/const_variable_declaration.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %x_ = alloca [11 x i8], align 1
  %"0" = getelementptr [11 x i8], [11 x i8]* %x_, i64 0, i64 0
  store i8 72, i8* %"0", align 1
  %"1" = getelementptr [11 x i8], [11 x i8]* %x_, i64 0, i64 1
  store i8 101, i8* %"1", align 1
  %"2" = getelementptr [11 x i8], [11 x i8]* %x_, i64 0, i64 2
  store i8 108, i8* %"2", align 1
  %"3" = getelementptr [11 x i8], [11 x i8]* %x_, i64 0, i64 3
  store i8 108, i8* %"3", align 1
  %"4" = getelementptr [11 x i8], [11 x i8]* %x_, i64 0, i64 4
  store i8 111, i8* %"4", align 1
  %"5" = getelementptr [11 x i8], [11 x i8]* %x_, i64 0, i64 5
  store i8 32, i8* %"5", align 1
  %"6" = getelementptr [11 x i8], [11 x i8]* %x_, i64 0, i64 6
  store i8 87, i8* %"6", align 1
  %"7" = getelementptr [11 x i8], [11 x i8]* %x_, i64 0, i64 7
  store i8 111, i8* %"7", align 1
  %"8" = getelementptr [11 x i8], [11 x i8]* %x_, i64 0, i64 8
  store i8 114, i8* %"8", align 1
  %"9" = getelementptr [11 x i8], [11 x i8]* %x_, i64 0, i64 9
  store i8 108, i8* %"9", align 1
  %"10" = getelementptr [11 x i8], [11 x i8]* %x_, i64 0, i64 10
  store i8 100, i8* %"10", align 1
  ret void
}

define void @__typescript__personality() {
entry:
  ret void
}

